--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node src/index.js",
-		"dev": "nodemon src/index.js"
+		"dev": "nodemon src/index.js -e js/hbs"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"express": "^4.17.1",
+		"hbs": "^4.0.4",
 		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^3.2.7",
 		"mongoose": "^5.6.2",
